fix: Add missing resource checks
(cherry picked from commit 7c6370679b56f1468c561a7807c5dd9d924c99b6)