@@ -13,6 +13,7 @@ import io.camunda.search.clients.reader.ProcessDefinitionStatisticsReader;
 import io.camunda.search.entities.ProcessFlowNodeStatisticsEntity;
 import io.camunda.search.query.ProcessDefinitionFlowNodeStatisticsQuery;
 import io.camunda.security.reader.ResourceAccessChecks;
+import java.util.Collections;
 import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -36,12 +37,12 @@ public class ProcessDefinitionStatisticsDbReader
   public List<ProcessFlowNodeStatisticsEntity> aggregate(
       final ProcessDefinitionFlowNodeStatisticsQuery query,
       final ResourceAccessChecks resourceAccessChecks) {
-    LOG.trace("[RDBMS DB] Query process definition flow node statistics with filter {}", query);
 
     if (shouldReturnEmptyResult(resourceAccessChecks)) {
-      return List.of();
+      return Collections.emptyList();
     }
 
+    LOG.trace("[RDBMS DB] Query process definition flow node statistics with filter {}", query);
     return processDefinitionMapper.flowNodeStatistics(query.filter());
   }
 }
